# gmv

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  Cross.toml  Dockerfile.base  Dockerfile.ffmpeg-base  LICENSE  build-ffmpeg-images.sh  build-images.sh  compress.sh  config.yml  makefile  readme.md
.cargo/: config.toml
avai/: Cargo.toml  config.yml  readme
avai/src/: guard_integration.rs  lib.rs  main.rs
avai/src/data/: mod.rs
avai/src/optimization/: mod.rs  model_compressor.rs  online_learner.rs
avai/src/pipeline/: mod.rs
avai/src/plugin/: mod.rs
guard/: Cargo.toml  config.yml
guard/examples/: hash_password.rs  init_database.rs
guard/migrations/sqlite/: 0003_guard_security.sql  0006_guard_user_profile.sql
guard/player/: README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
guard/player/src/: env.d.ts  index.ts  main.ts
guard/server/: Cargo.toml  config.yml
guard/server/data/: guard.db
guard/server/src/: app.rs  app_config.rs  lib.rs  main.rs  media.rs
guard/server/tests/: allocation_recovery.rs  api_phase7a.rs  business_control_rpc.rs  control_rpc_phase.rs  gate_g_http.rs  gate_r_phase13.rs  http_phase7b.rs  integration_phase8.rs  node_metrics_rpc.rs  outbox_phase8.rs  registry_bus.rs  s5_persistence.rs  sqlite_auth_phase.rs  store_contract.rs  ui_phase7b.rs
guard/src/: app_config.rs  lib.rs  main.rs
guard/src/auth/: mod.rs  service.rs  session.rs  user.rs
guard/src/bus/: event_log.rs  mod.rs
guard/src/core/: config.rs  error.rs  identity.rs  mod.rs
guard/src/gateway/: filter.rs  mod.rs  request.rs  score.rs
guard/src/job/: service.rs  state.rs
guard/src/lease/: mod.rs  service.rs  state.rs
guard/src/mqttc/: publisher.rs  subscriber.rs
guard/src/operation/: service.rs
guard/src/outbox/: mod.rs  state.rs  worker.rs
guard/src/registry/: clock.rs  health.rs  service.rs  state.rs
guard/src/route/: mod.rs  service.rs
guard/src/runtime/: mod.rs  node_expirer.rs  node_rpc.rs  web.rs
guard/src/sim/: control.rs
guard/src/store/: migration.rs  model.rs  mysql.rs  persistent.rs  sqlite.rs
guard/src/ui/: mod.rs
guard/src/webhook/: client.rs  mod.rs  signing.rs
guard/tests/: allocation_recovery.rs  api_phase7a.rs  gate_g_http.rs  gate_r_phase13.rs  http_phase7b.rs  integration_phase8.rs  node_metrics_rpc.rs  outbox_persistence_phase8.rs  registry_bus.rs  s5_persistence.rs  simulator_phase9.rs  sqlite_auth_phase.rs
guard/ui/: package.json  playwright.live.config.ts  vite.config.ts
guard/ui/src/: main.ts
guard/ui/tests/: ui-smoke.spec.ts
ns/: 123.sdp  Cargo.toml  config.yml  readme
ns/examples/: channels.rs
ns/src/: main.rs
ns/src/biz/: api.rs  call.rs  mod.rs
ns/src/converter/: handler.rs
ns/src/general/: mode.rs
ns/src/io/: event_hook.rs  hook_handler.rs  http_api.rs  http_handler.rs  input.rs  mod.rs  output.rs  rtp_handler.rs
ns/src/state/: cache.rs  session.rs
session/: Cargo.toml  config.yml
session/assets/: mysql_init.sql
session/core/: Cargo.toml
session/gb28181/: Cargo.toml  build_pjsip_bootstrap.sh  config.yml
session/gb28181/src/: app.rs  guard_integration.rs  lib.rs  main.rs  normal_flow_tests.rs
session/gb28181/tests/: sip_corpus.rs
session/onvif/: Cargo.toml
session/session-core/src/: lib.rs
session/session-gb28181/: Cargo.toml  config.yml
session/session-onvif/: Cargo.toml
session/session-onvif/src/: lib.rs  main.rs
session/src/: app.rs  guard_integration.rs  lib.rs  main.rs  normal_flow_tests.rs
session/src/api/: mod.rs
session/src/controller/: api.rs  hook.rs
session/src/gb/: core.rs  io.rs  mod.rs  shared.rs  sip_tcp_splitter.rs
session/src/general/: cache.rs  http.rs  mod.rs  model.rs  runner.rs  schedule.rs
session/src/http/: api.rs  client.rs  doc.rs  edge.rs  hook.rs  mod.rs
session/src/register/: core.rs  event.rs  io.rs  mod.rs  network.rs  protocol.rs  schedule.rs  session.rs
session/src/service/: api_serv.rs  biz.rs  callback.rs  control.rs  dialog_recovery.rs  edge_serv.rs  handler.rs  hook_serv.rs  mod.rs  stream_close.rs  talk.rs  talk_close.rs
session/src/state/: cache.rs  mod.rs  model.rs  runner.rs  schedule.rs  session.rs
session/src/storage/: db_task.rs  dialog_session.rs  entity.rs  mapper.rs  mod.rs  pics.rs  ssrc_sequence.rs
session/src/utils/: IdBuilder.rs  edge_token.rs  id_builder.rs  mod.rs  se_token.rs
session/src/web/: api.rs  hook.rs  mod.rs  se.rs
session/tests/: sip_corpus.rs  test.rs
shared/: Cargo.toml
shared/domain/: Cargo.toml
shared/examples/: c1.rs  client.rs  server.rs
shared/node-client/: Cargo.toml
shared/nodec/: Cargo.toml
shared/nodec/src/: lib.rs
shared/protocol/: Cargo.toml  build.rs
shared/protocol/src/: lib.rs
shared/protocol/tests/: descriptor_contract.rs
shared/src/: lib.rs
shared/src/enums/: mod.rs
shared/src/format/: flv.rs  frame.rs  mod.rs  mp4.rs  rtp.rs  ts.rs
shared/src/info/: codec.rs  filter.rs  format.rs  generator.rs  io.rs  media_info.rs  media_info_ext.rs  media_initialize.rs  mod.rs  muxer.rs  obj.rs  output.rs  output1.rs  res.rs
shared/src/io/: mod.rs  tcp.rs  udp.rs
stream/: 123.sdp  Cargo.toml  build_ffmpeg_min.sh  build_ffmpeg_min_bootstrap.sh  config.yml  env_ffmpeg.sh  readme  readme.md
stream/src/: app.rs  guard_integration.rs  main.rs
stream/src/biz/: api.rs  call.rs  mod.rs
stream/src/coder/: h264.rs  mod.rs  th264.rs
stream/src/comm/: mod.rs
stream/src/container/: flv.rs  hls.rs  mod.rs  mp4.rs  ps.rs  rtp.rs
stream/src/data/: buffer.rs  mod.rs  session.rs
stream/src/general/: cfg.rs  mod.rs  mode.rs  mp.rs  util.rs
stream/src/io/: call.rs  event_handler.rs  hook_handler.rs  http_handler.rs  local.rs  mod.rs  rtcp_handler.rs  rtp_handler.rs  splitter.rs  talk.rs
stream/src/media/: mod.rs  rtp.rs  rw.rs
stream/src/protocol/: mod.rs  trans.rs
stream/src/state/: buffer.rs  cache.rs  event.rs  event_handler.rs  layer.rs  mod.rs  mode.rs  msg.rs  register.rs  status.rs
stream/src/trans/: demuxer.rs  flv_muxer.rs  flv_process.rs  gb_process.rs  hls_muxer.rs  hls_process.rs  media_demuxer.rs  mod.rs
(+412 files in other folders)
