[package]
name = "gmv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pig = { path = "../pig", features = ["db-mysql", "net"] }
rsip = "0.4"
serde = "1.0"
constructor = { path = "../drives/constructor" }
ezsql = { path = "../drives/ezsql" }
tools = { path = "../drives/tools" }