[workspace]
resolver = "2"
members = [
    "session",
    "shared",
    "shared/protocol",
    "stream",
    "avai",
    "guard",
    "node-client",
]

[workspace.package]
version = "2.1.0-release"
edition = "2024"
authors = ["Kz. <kz986542@gmail.com>"]
#about = "致力于打造一个音视频AI平台:信令+流媒体+AI"

[workspace.dependencies]
anyhow = "1"
parking_lot = "0.12"
crossbeam-channel = "0.5"
rayon = "1.10"
regex = "1.10"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
url = "2.5"
uuid = { version = "1.7", features = ["v4"] }
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum", "vendored"] }
axum = "0.8"
axum-server = "0.8"
tower-http = "0.6"
argon2 = "0.5"
tower = "0.5"
rumqttc = "0.25.1"

[profile.dev]
debug = true
opt-level = 0
