[package]
name = "avai"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
base_rpc = { path = "../../pigs/base_rpc" }
gmv-protocol = { path = "../shared/protocol" }
gmv-node-client = { path = "../shared/node-client" }
tonic = "0.14"
shared = { path = "../shared" }
#base = { package = "base",git = "https://github.com/epimore/pigs.git",rev = "0ac18e3", features = ["net"] }
base = { package = "base", path = "../../pigs/base", features = ["net"] }
#burn = "0.19"
#burn-tensor = "0.19"
#candle-transformers = "0.9"
#candle-core = "0.9"
#candle-nn = "0.9"
#tract-core = "0.22"
#tract-linalg = "0.22"
#smartcore = "0.4"
#automl = "0.3"
