[package]
name = "guard"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
gmv-protocol = { path = "../shared/protocol" }
parking_lot.workspace = true
thiserror = "2"
uuid = { version = "1.23", features = ["v4", "v7"] }
base = { path = "../../pigs/base" }
base_db = { path = "../../pigs/base_db", default-features = false, features = ["mysql", "sqlite-bundled"] }
base_rpc = { path = "../../pigs/base_rpc" }
reqwest = { workspace = true, features = ["stream"] }
url.workspace = true
rumqttc.workspace = true
hmac.workspace = true
axum.workspace = true
axum-server = { workspace = true, features = ["tls-rustls"] }
tower-http = { workspace = true, features = ["cors", "fs", "set-header"] }
argon2.workspace = true
rust-embed = { version = "8", optional = true }


[dev-dependencies]
tower = { workspace = true, features = ["util"] }

[features]
default = []
embed-ui = ["dep:rust-embed"]
