[package]
name = "ns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
common = { path = "../../pig/common", features = ["net"] }
constructor = { path = "../../macros/constructor" }
discortp = { version = "0.6.0", features = ["discord-full"] }
xmpegts = {git = "https://github.com/harlanc/xiu",branch = "gb28181"}
bytesio = "0.3.2"
byteorder = "1.4.2"
parking_lot = "0.12"
ffmpeg-next = { version = "7.0", features = ["default", "static"] }