[package]
name = "gmv-session"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsip = "0.4"
sqlx = { version = "0.8" }
common = { package = "common_db",git = "https://github.com/epimore/pigs.git",rev = "3399d5a2db36f4845dca3681d87ed71fb3f0d83a", features = ["net"] }
#common = { package = "common_db", path = "../../pigs/common_db", features = ["net"] }
uuid = { version = "1.7.0", features = ["v4"] }
quick-xml = { version = "0.31", features = ["encoding_rs", "encoding"] }
encoding_rs = "0.8"
poem = "3.1"
poem-openapi = { version = "5.1", features = ["swagger-ui"] }
reqwest = { version = "0.12", features = ["json"] }
sdp-types = "0.1"
regex = "1.10.4"
image = "0.25"
rayon = "1.10"
crossbeam-channel = "0.5"
parking_lot = "0.12"