[package]
name = "gmv-session"
version.workspace = true
edition.workspace = true

[dependencies]
shared = { path = "../shared" }
base = { package = "base_db",git = "https://github.com/epimore/pigs.git",rev = "934890fb", features = ["net"] }
#base = { package = "base_db", path = "../../pigs/base_db", features = ["net"] }

rsip = "0.4"
sqlx = { version = "0.8", default-features = false }
quick-xml = { version = "0.31", features = ["encoding_rs", "encoding"] }
encoding_rs = "0.8"
sdp-types = "0.1"
image = "0.25"
cron = "0.15"
pretend = "0.4"
pretend-reqwest = "0.4"
axum = { version = "0.8", features = ["multipart"] }

# 共享依赖（自动继承版本）
anyhow.workspace = true
parking_lot.workspace = true
crossbeam-channel.workspace = true
regex.workspace = true
url.workspace = true
rayon.workspace = true
uuid.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
