[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
base = { git = "https://github.com/epimore/pigs.git",rev = "a0b9ed27", features = ["net"] }
#base = { package = "base", path = "../../pigs/base", features = ["net"] }
paste = "1.0"

# 共享依赖
utoipa.workspace = true
