[package]
name = "gmv-stream"
version.workspace = true
edition.workspace = true

[dependencies]
base = { git = "https://github.com/epimore/pigs.git",features = ["net"] }
shared = { path = "../shared" }

futures-core = "0.3"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
rsmpeg = { version = "0.14.2+ffmpeg.6.1", default-features = false, features = ["link_system_ffmpeg"] }
pretend = "0.4"
pretend-reqwest = "0.4"
axum = "0.8"
rtp-types = "0.1"

# 共享依赖
anyhow.workspace = true
parking_lot.workspace = true
crossbeam-channel.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
