[package]
name = "gmv-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
prost = "0.14"
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"

[build-dependencies]
protoc-bin-vendored = "3.2"
tonic-prost-build = "0.14"

[dev-dependencies]
prost-types = "0.14"
